--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "exceljs",
-  "version": "4.4.0",
+  "name": "@lamten-dev/exceljs",
+  "version": "5.0.0",
   "description": "Excel Workbook Manager - Read and Write xlsx and csv Files.",
   "private": false,
   "license": "MIT",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
   "author": {
     "name": "Guyon Roche",
     "email": "guyon@live.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/exceljs/exceljs.git"
+    "url": "https://github.com/lamten-dev/exceljs.git"
   },
   "engines": {
-    "node": ">=8.3.0"
+    "node": ">=22.3.0"
   },
   "main": "./excel.js",
   "browser": "./dist/exceljs.min.js",
@@ -144,6 +147,6 @@
     "regenerator-runtime": "^0.13.7",
     "sax": "^1.2.4",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.10"
   }
 }
